# gtest_c

./: CMakeLists.txt  CONTRIBUTORS  README.md  internal_utils.cmake
samples/: sample.c  sample.h  sample_unittest.cpp
